--- a/Simulation/examples/WGR_M4.ipynb
+++ b/Simulation/examples/WGR_M4.ipynb
@@ -49,7 +49,7 @@
     "from utils.plot_utils import plot_kde_2d\n",
     "from utils.basic_utils import setup_seed, sample_noise\n",
     "from data.SimulationData import DataGenerator, generate_multi_responses_multiY\n",
-    "from utils.training_utils_copy import train_WGR_fnn\n",
+    "from utils.training_utils import train_WGR_fnn\n",
     "from utils.evaluation_utils import L1L2_MSE_mean_sd_G, MSE_quantile_G_multiY\n",
     "from models.generator import generator_fnn\n",
     "from models.discriminator import discriminator_fnn\n",
