--- a/real_data/examples/CT_slices.ipynb
+++ b/real_data/examples/CT_slices.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2500d4fc-d853-4aa7-a8f7-6ed56bb1e6cc",
    "metadata": {},
    "outputs": [
@@ -900,7 +900,16 @@
       "Mean L1 Loss: 0.473897, Mean L2 Loss: 0.505297\n",
       "Epoch 49, Iter 30700, D Loss: -0.0001, G Loss: 0.2086, L1: 0.4739, L2: 0.5053\n",
       "Mean L1 Loss: 0.520987, Mean L2 Loss: 0.592459\n",
-      "Epoch 49, Iter 30800, D Loss: 0.0008, G Loss: 0.2834, L1: 0.5210, L2: 0.5925\n"
+      "Epoch 49, Iter 30800, D Loss: 0.0008, G Loss: 0.2834, L1: 0.5210, L2: 0.5925\n",
+      "Mean L1 Loss: 0.459730, Mean L2 Loss: 0.485602\n",
+      "Epoch 49, Iter 30900, D Loss: 0.0004, G Loss: 0.3241, L1: 0.4597, L2: 0.4856\n",
+      "Mean L1 Loss: 0.467240, Mean L2 Loss: 0.508293\n",
+      "Epoch 49, Iter 31000, D Loss: 0.0007, G Loss: 0.3654, L1: 0.4672, L2: 0.5083\n",
+      "Mean L1 Loss: 0.547819, Mean L2 Loss: 0.617081\n",
+      "Epoch 49, Iter 31100, D Loss: 0.0007, G Loss: 0.3804, L1: 0.5478, L2: 0.6171\n",
+      "Mean L1 Loss: 0.626568, Mean L2 Loss: 0.746455\n",
+      "Epoch 49, Iter 31200, D Loss: 0.0005, G Loss: 0.4104, L1: 0.6266, L2: 0.7465\n",
+      "Epoch 49 - D Loss: 0.0005, G Loss: 0.4266\n"
      ]
     }
    ],
@@ -913,10 +922,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "21840938-791f-47b3-94cd-41726ee015b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L1 Loss: 0.4530401825904846\n",
+      "L2 Loss: 0.4241640567779541\n",
+      "CP: 0.9598000049591064\n",
+      "PI length: 2.444796085357666\n",
+      "std of LBE: 0.3187739849090576\n",
+      "std of UBE: 0.3126869201660156\n"
+     ]
+    }
+   ],
    "source": [
     "CT_numerical_Results = eva_G_UniY(G=G_net, x=X_test, y=y_test, noise_dim=args.noise_dim, test_size=args.test,  J_t_size=500)"
    ]
